Feat:  docker 说明

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,11 +5,13 @@ services:
       context: .
       args:
         Server_Host: "192.168.1.199"
+    # image: zp29/aliststrm
     ports:
       - "8080:8080"  # 映射前端端口
       - "3000:3000"  # 映射后端端口
     volumes:
-      - ./links.json:/app/links.json  # 将配置文件挂载到容器内
+      - ./links.json:/app/links.json
+      - ./outputDir:/app/outputDir
     environment:
       - OMDB_API_KEY=OTEzNDdjMTA=
       - TMDB_API_KEY=ZjJmN2IwZTQ0MTk4NGNhZDY4MGQwMmJkMDM1ZjMxZjE=
