--- a/server/package.json
+++ b/server/package.json
@@ -1,9 +1,13 @@
 {
   "name": "AlistStrmServer",
   "version": "1.0.0",
-  "description": "",
-  "main": "generateStrm.js",
+  "description": "Alist STRM 文件生成服务器",
+  "main": "dist/app.js",
   "scripts": {
+    "start": "node dist/app.js",
+    "dev": "ts-node src/app.ts",
+    "build": "tsc",
+    "watch": "tsc -w",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -15,5 +19,15 @@
     "node-schedule": "^2.1.1",
     "node-telegram-bot-api": "^0.66.0",
     "ws": "^8.18.0"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.11.30",
+    "@types/node-schedule": "^2.1.6",
+    "@types/node-telegram-bot-api": "^0.64.4",
+    "@types/ws": "^8.5.10",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.2"
   }
 }
