--- a/web/package.json
+++ b/web/package.json
@@ -1,6 +1,6 @@
 {
   "name": "AlistStrmWeb",
-  "description": "Vue2 JavaScript Starter Project For Vite.",
+  "description": "Vue2 TypeScript Starter Project For Vite.",
   "version": "0.0.0",
   "license": "MIT",
   "bugs": {
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "dev": "vite",
-    "build": "vite build"
+    "build": "vite build",
+    "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
     "@fingerprintjs/fingerprintjs": "^4.4.3",
@@ -24,6 +25,9 @@
   "devDependencies": {
     "@commitlint/cli": "^17.6.5",
     "@commitlint/config-conventional": "^17.6.5",
+    "@types/node": "^20.11.30",
+    "@typescript-eslint/eslint-plugin": "^6.18.1",
+    "@typescript-eslint/parser": "^6.18.1",
     "@vitejs/plugin-vue2": "^2.2.0",
     "autoprefixer": "^10.4.14",
     "cz-git": "^1.6.1",
@@ -46,10 +50,12 @@
     "stylelint-config-standard": "^33.0.0",
     "stylelint-less": "^1.0.6",
     "stylelint-order": "^6.0.3",
+    "typescript": "^5.4.2",
     "unplugin-auto-import": "^0.18.6",
     "unplugin-vue-components": "^0.27.5",
     "vite": "^4.3.9",
-    "vue-eslint-parser": "^9.3.0"
+    "vue-eslint-parser": "^9.3.0",
+    "vue-tsc": "^1.8.27"
   },
   "husky": {
     "hooks": {
